--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1,yourdomain.com
 CORS_ALLOW_ALL_ORIGINS=True
 # Database settings
-DB_NAME=traceagri3
+DB_NAME=cadb
 DB_USER=postgres
-DB_PASSWORD=weddingLIFE18
+DB_PASSWORD=NEWdimension_MAC@24
 DB_HOST=localhost
 DB_PORT=5433
 
