--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ opencv-python==4.11.0.86
 pilkit==3.0
 pillow==11.1.0
 prompt_toolkit==3.0.50
+psycopg2==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
 python-crontab==3.2.0
