--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: celery -A cadb worker --loglevel=info
+    command: celery -A siade25 worker --loglevel=info
     volumes:
       - .:/app
     env_file:
