--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ pilkit==3.0
 pillow==11.1.0
 prompt_toolkit==3.0.50
 psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
 python-crontab==3.2.0
