--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 djoser==2.3.1
 Faker==35.2.0
+gunicorn==23.0.0
 idna==3.10
 importlib_metadata==8.6.1
 kombu==5.4.2
@@ -35,9 +36,11 @@ Markdown==3.7
 numpy==2.0.2
 oauthlib==3.2.2
 opencv-python==4.11.0.86
+packaging==24.2
 pilkit==3.0
 pillow==11.1.0
 prompt_toolkit==3.0.50
+psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
