--- a/requirements.txt
+++ b/requirements.txt
@@ -12,18 +12,22 @@ click-repl==0.3.0
 cron-descriptor==1.4.5
 cryptography==44.0.0
 defusedxml==0.8.0rc2
+dj-rest-auth==7.0.1
 Django==4.2.18
 django-allauth==65.3.1
 django-appconf==1.1.0
 django-celery-beat==2.7.0
+django-ckeditor==6.7.2
 django-compressor==4.5.1
 django-cors-headers==4.6.0
 django-filter==24.3
 django-imagekit==5.0.0
+django-js-asset==2.2.0
 django-qrcode==0.3
 django-simple-history==3.8.0
 django-timezone-field==7.1
 django-tinymce==4.1.0
+django-user-agents==0.4.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 djoser==2.3.1
@@ -59,7 +63,10 @@ social-auth-core==4.5.4
 sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2025.1
+ua-parser==1.0.1
+ua-parser-builtins==0.18.0.post1
 urllib3==2.3.0
+user-agents==2.2.0
 vine==5.1.0
 wcwidth==0.2.13
 whitenoise==6.9.0
