--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+contourpy==1.3.0
 cron-descriptor==1.4.5
 cryptography==44.0.0
+cycler==0.12.1
 defusedxml==0.8.0rc2
 dj-rest-auth==7.0.1
 Django==4.2.18
@@ -32,11 +34,15 @@ djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 djoser==2.3.1
 Faker==35.2.0
+fonttools==4.56.0
 gunicorn==23.0.0
 idna==3.10
 importlib_metadata==8.6.1
+importlib_resources==6.5.2
+kiwisolver==1.4.7
 kombu==5.4.2
 Markdown==3.7
+matplotlib==3.9.4
 numpy==2.0.2
 oauthlib==3.2.2
 opencv-python==4.11.0.86
@@ -48,6 +54,7 @@ psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
+pyparsing==3.2.1
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
