--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ dj-rest-auth==7.0.1
 Django==4.2.18
 django-allauth==65.3.1
 django-appconf==1.1.0
+django-celery==3.1.17
 django-celery-beat==2.7.0
 django-ckeditor==6.7.2
 django-compressor==4.5.1
