--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==5.3.1
 asgiref==3.8.1
+async-timeout==5.0.1
 billiard==4.2.1
 celery==5.4.0
 certifi==2024.12.14
@@ -62,6 +63,7 @@ python-decouple==3.8
 python3-openid==3.2.0
 qrcode==8.0
 rcssmin==1.1.2
+redis==5.2.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 rjsmin==1.2.2
